# svg_to_png_live

./: .gitignore  README.md  pyproject.toml
assets/: README.txt
scripts/: build_win.ps1  fetch_resvg_win64.ps1  run_dev.ps1
src/svg_to_png_live/: __init__.py  app.py  config.py  main.py
src/svg_to_png_live.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/svg_to_png_live/clipboard/: __init__.py  watcher.py  win_clipboard.py
src/svg_to_png_live/convert/: __init__.py  cache.py  renderer.py  svg_detect.py  svg_size.py
src/svg_to_png_live/export/: __init__.py  saver.py
src/svg_to_png_live/ui/: __init__.py  main_window.py  settings_dialog.py  tray.py
tests/: test_conversion_integration.py  test_saver.py  test_svg_detect.py  test_svg_size.py
