[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svg-to-png-live"
version = "0.1.0"
description = "Clipboard SVG to PNG converter (Windows tray app)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "NeuroMorph" }]
dependencies = [
  "PySide6>=6.7.0",
  "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyinstaller>=6.3.0",
]

[project.scripts]
svg-to-png-live = "svg_to_png_live.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


